# Lattice

./: .gitignore  ADMIN.md  ADVANCED_FEATURES.md  AUDIT.md  BUILD_REPORT.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FINAL_REPORT.md  GEMINI.md  LICENSE  MAINNET_REQUIREMENTS.md  MINING_GUIDE.md  Makefile  README.md  STATUS.md  STATUS_NEW.md  STRATEGY.md  TESTNET_PLAN.md  TOKENOMICS.md  docker-compose.yml  install.ps1  install.sh  lattice.details.md  plan.md  start-mining.ps1  start-mining.sh  start-testnet.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml  lattice-only.yml
benches/: comprehensive.rs
bins/lattice/: Cargo.toml
bins/lattice-cli/: Cargo.toml
bins/lattice-cli/src/: formatter.rs  main.rs  node.rs  query.rs  rpc_client.rs  transaction.rs  wallet.rs
bins/lattice-miner/: Cargo.toml
bins/lattice-miner/src/: display.rs  main.rs  rpc_client.rs  stats.rs
bins/lattice-node/: Cargo.toml
bins/lattice-node/src/: main.rs
bins/lattice/src/: lib.rs  main.rs
bins/lattice/src/cli/: doctor.rs  formatter.rs  mod.rs  node.rs  output.rs  query.rs  rpc_client.rs  transaction.rs  wallet.rs
bins/lattice/src/miner/: display.rs  mod.rs  rpc_client.rs  stats.rs
bins/lattice/src/node/: config.rs  mod.rs
crates/lattice-consensus/: Cargo.toml
crates/lattice-consensus/src/: difficulty.rs  lib.rs  miner.rs  pow.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: abi.rs  address.rs  block.rs  error.rs  genesis.rs  governance.rs  health.rs  lib.rs  merkle.rs  metrics.rs  mmr.rs  receipt.rs  state.rs  tokenomics.rs  transaction.rs  validation.rs  validator.rs
crates/lattice-crypto/: Cargo.toml
crates/lattice-crypto/src/: dilithium.rs  hash.rs  kyber.rs  lib.rs
crates/lattice-network/: Cargo.toml
crates/lattice-network/src/: error.rs  lib.rs  peer.rs  protocol.rs  sharding.rs  sync.rs
crates/lattice-rpc/: Cargo.toml
crates/lattice-rpc/src/: error.rs  handlers.rs  lib.rs  server.rs  types.rs
crates/lattice-storage/: Cargo.toml
crates/lattice-storage/src/: blocks.rs  error.rs  lib.rs  mempool.rs  state.rs
crates/lattice-vm/: Cargo.toml
crates/lattice-vm/src/: error.rs  gas.rs  host.rs  lib.rs  opcodes.rs  runtime.rs
crates/lattice-wallet/: Cargo.toml
crates/lattice-wallet/src/: account.rs  error.rs  keystore.rs  lib.rs  transfer.rs
docs/: api-reference.md  architecture.md  protocol-baseline.md  rollback-strategy.md  vm-scope.md  whitepaper.md
scripts/: check-system.ps1  network-diagnostics.sh
tests/integration/: block_tests.rs  consensus_tests.rs  crypto_tests.rs  mod.rs  networking_smoke_tests.rs  protocol_consistency_tests.rs
