[workspace]
resolver = "2"

members = [
    "crates/lattice-core",
    "crates/lattice-crypto",
    "crates/lattice-consensus",
    "crates/lattice-network",
    "crates/lattice-vm",
    "crates/lattice-storage",
    "crates/lattice-rpc",
    "crates/lattice-wallet",
    "bins/lattice-node",
    "bins/lattice-cli",
    "bins/lattice-miner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lattice-chain/lattice"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
lattice-core = { path = "crates/lattice-core" }
lattice-crypto = { path = "crates/lattice-crypto" }
lattice-consensus = { path = "crates/lattice-consensus" }
lattice-network = { path = "crates/lattice-network" }
lattice-vm = { path = "crates/lattice-vm" }
lattice-storage = { path = "crates/lattice-storage" }
lattice-rpc = { path = "crates/lattice-rpc" }
lattice-wallet = { path = "crates/lattice-wallet" }

# Post-quantum cryptography
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
sha3 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.3", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Networking
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "yamux", "tcp", "macros", "request-response"] }

# Storage
rocksdb = "0.21"

# Smart contracts
wasmer = "4.2"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utils
hex = "0.4"
bs58 = "0.5"
rand = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
argon2 = "0.5"
rayon = "1.8"

# Testing
proptest = "1.4"
criterion = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
