[package]
name = "lattice-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lattice-cli"
path = "src/main.rs"

[dependencies]
lattice-core = { workspace = true }
lattice-crypto = { workspace = true }
lattice-wallet = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true }

# HTTP client for RPC
reqwest = { version = "0.11", features = ["json"] }

# Interactive password input
dialoguer = "0.11"

# Terminal colors
colored = "2.1"
