[package]
name = "lattice-miner"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lattice-miner"
path = "src/main.rs"

[dependencies]
lattice-core = { workspace = true }
lattice-crypto = { workspace = true }
lattice-consensus = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
parking_lot = { workspace = true }
hex = { workspace = true }
colored = "2.1"
