[package]
name = "lattice-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-core = { workspace = true }
lattice-crypto = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }
rayon = { workspace = true }
borsh = { workspace = true }
