[package]
name = "lattice-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pqcrypto-dilithium = { workspace = true }
pqcrypto-kyber = { workspace = true }
pqcrypto-traits = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
zeroize = "1.7"

[dev-dependencies]
proptest = { workspace = true }
