[package]
name = "lattice-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-core = { workspace = true }
lattice-crypto = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
