[package]
name = "lattice-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-core = { workspace = true }
rocksdb = { workspace = true }
borsh = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
tempfile = "3"
