[package]
name = "lattice-vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-core = { workspace = true }
lattice-crypto = { workspace = true }
wasmer = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
