[package]
name = "lattice-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lattice-core = { workspace = true }
lattice-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
zeroize = "1.7"
argon2 = "0.5"
aes-gcm = "0.10"
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
